--- a/config/locales/irm/en.yml
+++ b/config/locales/irm/en.yml
@@ -596,6 +596,7 @@ en:
   label_irm_support_group_person_name: Person Name
   label_action_select_person: Choose support group member
   label_action_new_from_person: Choose support group
+  label_irm_support_group_parent: Parent Support Group
   #=========================end irm support_groups_controller=======================#
   #=========================    irm people_controller=======================#
   label_irm_person: Person
