人员查看页面，可访问公司表格下，加入“可访问系统”表格。并且支持从表格进入增加可访问系统页面，以及做移除可访问系统到操作。

--- a/config/locales/irm/zh.yml
+++ b/config/locales/irm/zh.yml
@@ -789,6 +789,9 @@ zh:
   label_irm_person_template_flag: 模板用户
   label_irm_person_profile: 简档
   label_irm_person_role: 角色
+  label_irm_person_access_system: 可访问系统
+  label_irm_person_add_to_company: 加入公司
+  label_irm_person_add_to_system: 加入外部系统
   #=========================end irm people_controller=======================#
   #=========================irm id_flexes_controller=======================#
   label_irm_id_flex: 弹性域
