--- a/config/locales/irm/en.yml
+++ b/config/locales/irm/en.yml
@@ -1257,3 +1257,11 @@ en:
   label_irm_psw_policy_max_attempts: Maximum invalid login attempts
   label_irm_psw_policy_lockout_period: Lockout effective period
   #======================= end password policies ====================
+  #======================= Operation Unit ====================
+  label_irm_operation_unit_edit: Operation Unit Setting
+  label_irm_operation_unit_name: Name
+  label_irm_operation_unit_short_name: Short Name
+  label_irm_operation_unit_default_language_code: Default Language Code
+  label_irm_operation_unit_default_time_zone_code: Default Time Zone
+  label_irm_operation_unit_description: Description
+  #======================= end Operation Unit ====================
