在incident_requests下增加一个页面：kanban_index.html.erb，专门放置看板。 移除原来的TAB控件，增加一个按钮，用于切换 看板模式 以及 列表模式。 在按钮处增加权限控制：
<% if allow_to_function?(:view_kanban) %>
<div style="display:block;width:100%;float:left;margin-bottom:15px;">
    <div class="button"><%= link_to t(:kanban_mode), {:action => "kanban_index"}%></div>
</div>
<% end %>

--- a/config/locales/irm/zh.yml
+++ b/config/locales/irm/zh.yml
@@ -123,6 +123,8 @@ zh:
   upload_from_clipboard: 从剪贴板上传图片
   created_by: 创建人
   created_at: 创建时间
+  kanban_mode: 看板模式
+  list_mode: 列表模式
   #=========================end usual custom=======================#
   #=========================    irm lookup_types_controller=====================#
   label_lookup_types: 快速编码类型
