--- a/config/locales/irm/en.yml
+++ b/config/locales/irm/en.yml
@@ -130,6 +130,8 @@ en:
   input_keyword_you_want_to_search: Input keyword you want to search
   display_all: Show All
   upload_from_clipboard: Upload Image From Clipboard
+  kanban_mode: Kanban Mode
+  list_mode: List Mode
   #=========================end usual custom=======================#
   #=========================    irm lookup_types_controller=======================#
   label_lookup_types: Lookup Type
