--- a/config/locales/irm/en.yml
+++ b/config/locales/irm/en.yml
@@ -467,6 +467,7 @@ en:
   label_irm_login_record_browser: Browser
   #=========================end irm login_records_controller=======================#
   #=========================    irm organizations_controller=======================#
+  label_irm_organization_explosion: Organization and Subordinates
   label_irm_organization_company_name: Company Name
   label_irm_organization_short_name: Code
   label_irm_organization_name: Name
@@ -573,30 +574,32 @@ en:
   label_irm_site: Site
   #=========================end irm site_groups_controller=======================#
   #=========================    irm support_groups_controller=======================#
-  label_irm_support_group_company_name: Company Name
-  label_irm_support_group_organization_name: Organization Name
-  label_irm_support_group_group_code: Code
-  label_irm_support_group_name: Name
-  label_irm_support_group_description: Description
-  label_irm_support_group_status_code: Status Code
-  label_irm_support_group_new: New support_group
-  label_irm_support_group_edit: Edit support_group
-  label_irm_support_group_list: List support_group
-  label_irm_support_group_support_groups_tls:
+  label_irm_group: Group
+  label_irm_group_explosion: Group and subordinates
+  label_irm_group_company_name: Company Name
+  label_irm_group_organization_name: Organization Name
+  label_irm_group_group_code: Code
+  label_irm_group_name: Name
+  label_irm_group_description: Description
+  label_irm_group_status_code: Status Code
+  label_irm_group_new: New support_group
+  label_irm_group_edit: Edit support_group
+  label_irm_group_list: List support_group
+  label_irm_group_support_groups_tls:
     name: Name
-  label_irm_support_group_oncall_group: Oncall Group
-  label_irm_support_group_support_role: Support Group Role
-  label_irm_support_group_vendor_group: Vendor Group
-  label_irm_support_group_base_info: Base Info
-  label_irm_support_group_member: Support Group Member
+  label_irm_group_oncall_flag: Oncall Group
+  label_irm_group_support_role: Support Group Role
+  label_irm_group_vendor_flag: Vendor Group
+  label_irm_group_base_info: Base Info
+  label_irm_group_member: Support Group Member
   label_irm_support_person_name: Person Name
-  label_irm_support_group_choose_person: Choose Person
-  label_irm_support_group_add_person: Add Member
-  label_irm_support_group_show: Support Group
-  label_irm_support_group_person_name: Person Name
+  label_irm_group_choose_person: Choose Person
+  label_irm_group_add_person: Add Member
+  label_irm_group_show: Support Group
+  label_irm_group_person_name: Person Name
   label_action_select_person: Choose support group member
   label_action_new_from_person: Choose support group
-  label_irm_support_group_parent: Parent Support Group
+  label_irm_group_parent: Parent Support Group
   #=========================end irm support_groups_controller=======================#
   #=========================    irm people_controller=======================#
   label_irm_person: Person
@@ -705,10 +708,10 @@ en:
   label_irm_company_access_info: Company Access Info
   #=========================end irm company_access_controller=======================#
   #=========================    irm support_group_controller=======================#
-  label_irm_support_group_member_new: New Support Group Memeber
+  label_irm_group_member_new: New Support Group Memeber
   label_irm_select_result: Select Result
-  label_irm_support_group_member_group_list: List Support Group List
-  label_irm_support_group_member_info: Support Group Member
+  label_irm_group_member_group_list: List Support Group List
+  label_irm_group_member_info: Support Group Member
   #=========================end irm  support_group_controller=======================#
   #=========================    irm filters_controller=======================#
   label_irm_new_view_filter: New view
@@ -734,7 +737,8 @@ en:
   #=========================end irm filters_controller=======================#
   #========================= irm roles ===================================
   label_irm_role_list: Role list
-  label_irm_role: Role
+  label_irm_role_explosion: Role
+  label_irm_role_explosion: Role and Subordinates
   label_irm_role_new: New role
   label_irm_role_edit: Edit role
   label_irm_role_code: Role code
