--- a/config/locales/icm/zh.yml
+++ b/config/locales/icm/zh.yml
@@ -203,4 +203,5 @@ zh:
   label_icm_support_group_assignment_process_code: 分配流程
   label_icm_support_group_oncall_flag: 待命组
   label_icm_support_group_vendor_flag: 供应商组
+  label_icm_support_group_add_group_notice: 请添加人员组
   #=========================  end icm support_groups =========================#
