--- a/config/locales/irm/zh.yml
+++ b/config/locales/irm/zh.yml
@@ -81,6 +81,7 @@ zh:
   else: 否则
   up: 上移
   down: 下移
+  notice: 注意
   #常用语句
   notice_account_invalid_creditentials: 用户名或密码错误
   successfully_updated: 已经成功更新数据
