将external system、external system member相关的页面、controller、model从UID移动至IRM模块。并移除uid中其它页permission以屏蔽其入口。

--- a/config/locales/irm/zh.yml
+++ b/config/locales/irm/zh.yml
@@ -1550,3 +1550,23 @@ zh:
   label_irm_operation_unit_default_time_zone_code: Default Time Zone
   label_irm_operation_unit_description: Description
   #======================= end Operation Unit ====================
+
+
+
+  #=========================    irm external_systems_controller=======================#
+  label_irm_external_system_list: 外部系统列表
+  label_irm_external_system_new:  新建外部系统
+  label_irm_external_system_edit: 编辑外部系统
+  label_irm_external_system_external_system_code: 系统编码
+  label_irm_external_system_system_name: 系统名称
+  label_irm_external_system_system_description: 描述
+  label_irm_external_system_external_hostname: 主机名
+  label_irm_external_system_external_ip_address: IP地址
+  label_irm_external_system_status_meaning: 记录状态
+  label_irm_external_system:  外部系统
+  label_irm_external_system_info: 外部系统信息
+
+  label_irm_external_system_people: 系统人员
+  label_irm_external_system_people_type: 类型
+  label_irm_external_system_add_people: 添加成员
+  #=========================    end external_systems_controller=======================#
