事故单回复页面增加提单人员信息监测

--- a/config/locales/icm/en.yml
+++ b/config/locales/icm/en.yml
@@ -101,6 +101,9 @@ en:
   label_icm_incident_request_summary: Summary
   label_icm_incident_requset_addition_info: Addition information
   label_icm_incident_request_requested_by: Requester
+  label_icm_incident_request_requested_by_org: Requester Org.
+  label_icm_incident_request_requested_by_role: Requester Role
+  label_icm_incident_request_requested_by_profile: Requester Profile
   label_icm_incident_request_contact: Contact
   label_icm_incident_request_urgence_code: Urgence
   label_icm_incident_request_impact_range_code: Impact range
