--- a/config/locales/icm/zh.yml
+++ b/config/locales/icm/zh.yml
@@ -102,6 +102,9 @@ zh:
   label_icm_incident_request_summary: 信息
   label_icm_incident_requset_addition_info: 附加信息
   label_icm_incident_request_requested_by: 请求人
+  label_icm_incident_request_requested_by_org: 请求人组织
+  label_icm_incident_request_requested_by_role: 请求人角色
+  label_icm_incident_request_requested_by_profile: 请求人简档
   label_icm_incident_request_contact: 联系人
   label_icm_incident_request_urgence_code: 紧急度
   label_icm_incident_request_impact_range_code: 影响度
