--- a/config/locales/irm/zh.yml
+++ b/config/locales/irm/zh.yml
@@ -127,6 +127,7 @@ zh:
   kanban_mode: 看板模式
   list_mode: 列表模式
   error_file_upload_limit: 附件大小超出限制(最大限制 %{m} KB, 现上传 %{n} KB)
+  error_file_upload_limit_shot: 附件大小超出限制(最大限制 %{m} KB, 现上传 _ KB)
   file_upload_limit_alert: 最大尺寸 %{m} KB
   #=========================end usual custom=======================#
   #=========================    irm lookup_types_controller=====================#
