--- a/config/locales/irm/en.yml
+++ b/config/locales/irm/en.yml
@@ -646,6 +646,7 @@ en:
   label_irm_person_login_and_access: Login Access
   label_irm_person_company_access: Company Access
   label_irm_person_support_group: Support Group
+  label_irm_person_group: Group
   label_irm_person_notification: Notification
   label_irm_person_status_code: Status Code
   label_irm_person_login_access_company: Company Name
