--- a/config/locales/irm/zh.yml
+++ b/config/locales/irm/zh.yml
@@ -748,6 +748,7 @@ zh:
   label_irm_person_login_and_access: 访问控制
   label_irm_person_company_access: 可访问公司
   label_irm_person_support_group: 支持组
+  label_irm_person_group: 所属组
   label_irm_person_notification: 通知
   label_irm_person_status_code: 记录状态
   label_irm_person_login_access_company: 公司名称
