增加我的简档页面

--- a/config/locales/irm/en.yml
+++ b/config/locales/irm/en.yml
@@ -657,6 +657,7 @@ en:
   label_irm_person_all_support_groups: All Support Groups
   label_irm_person_choose_company: Choose Company
   label_irm_person_info: Person Info
+  label_irm_person_my_profile: My Profile
   label_irm_person_other_info: Other Info
   label_irm_person_company_access_flag: Company Access
   label_irm_person_support_stuff_flag: Support Stuff
