--- a/config/locales/irm/zh.yml
+++ b/config/locales/irm/zh.yml
@@ -759,6 +759,7 @@ zh:
   label_irm_person_all_support_groups: 所在支持组
   label_irm_person_choose_company: 选择公司
   label_irm_person_info: 个人信息
+  label_irm_person_my_profile: 我的简档
   label_irm_person_other_info: 其他信息
   label_irm_person_company_access_flag: 是否可以访问
   label_irm_person_support_stuff_flag: 是否支持组
