新建Profile时采用复制现有Profile，全新创建Profile工作量太大， 最好采用和Salesforce一样，新建Profile是通过复制现有的Profile来实现的。

--- a/config/locales/irm/en.yml
+++ b/config/locales/irm/en.yml
@@ -1314,6 +1314,8 @@ en:
   label_irm_profile_add_lane: Add Lane
   label_irm_profile_reorder_lane: Reorder
   label_irm_profile_ir_page_kanban: Incident Index Kanban
+  label_irm_profile_select_copy_from: You must select an existing profile to clone from.
+  label_irm_profile_existing_profile: Existing Profile
   #=======================end profiles ====================
 
 
