--- a/config/locales/csi/en.yml
+++ b/config/locales/csi/en.yml
@@ -44,6 +44,7 @@ en:
    label_csi_survey_incident_request_to: To
    label_csi_survey: Survey
    label_csi_survey_subject_result: Result
+   label_csi_survey_cannot_enable_none_subject: Can not enable survey unless it has any subject.
    #========================= end   irm regions_controller=======================#
    #========================= start irm regions_controller=======================#
    label_csi_survey_subject: Subject
