--- a/config/locales/irm/zh.yml
+++ b/config/locales/irm/zh.yml
@@ -777,7 +777,7 @@ zh:
   label_irm_person_delegate_manager: 主管
   label_action_select_roles: 选择角色
   label_action_add_roles: 选择角色
-  label_irm_person_add_to_support_group: 加入支持组
+  label_irm_person_add_to_support_group: 加入组
   label_irm_person_template_flag: 模板用户
   label_irm_person_profile: 简档
   label_irm_person_role: 角色
