用户加入外部系统的提示“选择加入的支持组” 应该提示“选择加入的外部系统”

--- a/config/locales/irm/zh.yml
+++ b/config/locales/irm/zh.yml
@@ -1575,7 +1575,7 @@ zh:
   label_irm_external_system_status_meaning: 记录状态
   label_irm_external_system:  外部系统
   label_irm_external_system_info: 外部系统信息
-
+  label_irm_external_system_select_system: 选择加入的外部系统
   label_irm_external_system_people: 系统人员
   label_irm_external_system_people_type: 类型
   label_irm_external_system_add_people: 添加成员
