--- a/config/locales/irm/en.yml
+++ b/config/locales/irm/en.yml
@@ -1352,7 +1352,7 @@ en:
   label_irm_external_system:  External System
   label_irm_external_system_status_meaning: Status Meaning
   label_irm_external_system_info: External System Info
-
+  label_irm_external_system_select_system: Select System
   label_irm_external_system_people: System Member
   label_irm_external_system_people_type: Type
   label_irm_external_system_add_people: Add Member
