fixed: 1. 个人密码修改时，新设置的密码和原密码一样，系统允许保存 如果用户设置新密码和原密码一样，系统应该提示“新密码不能和原密码一样”
2.
修改个人密码成功，系统没有提示消息，又返回密码修改界面，会让用户误解没有修改成功。
系统应该提示信息“密码已修改成功”

--- a/config/locales/irm/en.yml
+++ b/config/locales/irm/en.yml
@@ -681,6 +681,7 @@ en:
   label_irm_person_add_to_company: Add to Company
   label_irm_person_add_to_system: Add to External System
   label_irm_person_password_info: Set Password
+  error_irm_person_new_old_password_same: New password can not be same as the old one.
   #=========================end irm people_controller=======================#
   #=========================irm id_flexes_controller=======================#
   label_irm_id_flex: Flex
