fixed: 外部系统定义中,IP地址和主机名没有验证，可以随便输入值，存在问题，需要修改： 1，IP地址必须按照IP地址的规范和数字进行验证 2，Hostname主机名不允许录入汉字或者特殊字符

--- a/config/locales/irm/zh.yml
+++ b/config/locales/irm/zh.yml
@@ -1580,6 +1580,7 @@ zh:
   label_irm_external_system_people: 系统人员
   label_irm_external_system_people_type: 类型
   label_irm_external_system_add_people: 添加成员
+  error_irm_external_system_ip_invalid: IP地址无效
   #=========================    end external_systems_controller=======================#
   #=========================    license=======================#
   label_irm_license: 许可
