--- a/config/locales/irm/en.yml
+++ b/config/locales/irm/en.yml
@@ -1357,6 +1357,7 @@ en:
   label_irm_external_system_people: System Member
   label_irm_external_system_people_type: Type
   label_irm_external_system_add_people: Add Member
+  error_irm_external_system_ip_invalid: IP invalid
   #=========================    end external_systems_controller=======================#
   #=========================    license=======================#
   label_irm_license: License
