--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -216,6 +216,7 @@ en:
   label_irm_object_code: Business Object Code
   label_irm_operation_unit: Operation Unit
   label_irm_password_policy: Password Policy
+  label_irm_password_error: Password Error
   label_irm_profile: Profile
   label_irm_profile_application: Profile Application
   label_irm_profile_function: Profile Function
