--- a/config/locales/irm/zh.yml
+++ b/config/locales/irm/zh.yml
@@ -67,7 +67,7 @@ zh:
   save_as_draft: 存为草稿
   save_as_published: 发布
   go_to_top: 回到顶部
-  step_n: "步骤 %{n}。"
+  step_n: "步骤 %{n}  "
   step_n_total_m: "第 %{n} 步，共 %{m} 步"
   label_checked: 选取的
   label_unchecked: 未选取的
