fixed: 新建公告时，公告内容应为必填项，不能不输入。

--- a/config/locales/irm/en.yml
+++ b/config/locales/irm/en.yml
@@ -838,6 +838,7 @@ en:
   label_irm_bulletin_selected_organizations: Organization
   label_irm_bulletin_if_access_list_none: Everyone can visit this bulletin if access list did not set anything.
   label_irm_bulletin_attachment: Attachments
+  error_irm_bulletin_content_can_not_blank: Bulletin content can not be blank
   #======================== end bulletin controller ======================
   #======================== bu_column controller ======================
   label_irm_bu_column: Bulletin Column
