--- a/config/locales/irm/zh.yml
+++ b/config/locales/irm/zh.yml
@@ -979,6 +979,7 @@ zh:
   label_irm_bulletin_selected_organizations: 组织
   label_irm_bulletin_if_access_list_none: 如果没有限制可访问对象，则该公告对所有用户可见
   label_irm_bulletin_attachment: 公告附件
+  error_irm_bulletin_content_can_not_blank: 公告内容不能为空
   #======================== end bulletin controller ======================
   #======================== bu_column controller ======================
   label_irm_bu_column: 公告栏目
