--- a/config/locales/icm/en.yml
+++ b/config/locales/icm/en.yml
@@ -136,6 +136,7 @@ en:
   label_action_assign_dashboard: Incident Request Assign DashBoard
   label_icm_incident_request_assignable_list: Assignable Incident Request
   label_icm_incident_request_assign: Assign
+  error_icm_requested_by_can_not_blank: Requested by can not be blank
   #========================= end icm incident_requests_controller=======================#
   #=========================    icm incident_journals_controller=======================#
   label_icm_incident_reply_support_group_id: Referred group
