--- a/config/locales/icm/zh.yml
+++ b/config/locales/icm/zh.yml
@@ -141,6 +141,7 @@ zh:
   label_icm_incident_request_assign: 分配
   label_icm_incident_request_incident_status: 状态
   label_icm_incident_request_assign_me: 领取事故单
+  error_icm_requested_by_can_not_blank: 请求人不能为空
   #========================= end icm incident_requests_controller=======================#
   #=========================    icm incident_journals_controller=======================#
   label_icm_incident_reply_support_group_id: 转交组
