--- a/config/locales/skm/en.yml
+++ b/config/locales/skm/en.yml
@@ -65,6 +65,7 @@ en:
   label_action_new_step_2: Create, Step 2
   label_action_new_step_3: Create, Step 3
   label_action_new_step_4: Create, Step 3
+  remove_from_favorite: Remove
   #=========================skm FileManagement================================
   label_skm_file_management: Files
   label_skm_file_list: Files List
