--- a/config/locales/skm/zh.yml
+++ b/config/locales/skm/zh.yml
@@ -65,6 +65,7 @@ zh:
   label_action_new_step_2: 新建, 步骤2
   label_action_new_step_3: 新建, 步骤3
   label_action_new_step_4: 新建, 步骤3
+  remove_from_favorite: 移除收藏
   #=========================skm FileManagement================================
   label_skm_file_management: 文件管理
   label_skm_file_list: 文件列表
