fixed: 新建知识库，必输内容如果不输，系统不允许保存，但是没有任何报错信息提示 如附图所示，该模板中“事故内容”为必输内容，如果用户不输入，系统不允许保存 但是界面没有任何报错信息提示

--- a/config/locales/skm/en.yml
+++ b/config/locales/skm/en.yml
@@ -66,6 +66,7 @@ en:
   label_action_new_step_3: Create, Step 3
   label_action_new_step_4: Create, Step 3
   remove_from_favorite: Remove
+  error_skm_entry_detail_can_not_blank: This field can not be blank
   #=========================skm FileManagement================================
   label_skm_file_management: Files
   label_skm_file_list: Files List
