--- a/config/locales/irm/zh.yml
+++ b/config/locales/irm/zh.yml
@@ -831,6 +831,7 @@ zh:
   label_irm_select_result: 搜索结果
   #=========================end irm  support_group_controller=======================#
   #=========================    irm filters_controller=======================#
+  label_irm_filter: 视图过滤器
   label_irm_new_view_filter: 创建新视图
   label_irm_view_filter_new: 新建视图
   label_irm_view_filter_edit: 编辑视图
