--- a/config/locales/icm/en.yml
+++ b/config/locales/icm/en.yml
@@ -137,6 +137,8 @@ en:
   label_icm_incident_request_assignable_list: Assignable Incident Request
   label_icm_incident_request_assign: Assign
   error_icm_requested_by_can_not_blank: Requested by can not be blank
+  label_icm_incident_request_view_filter_data_range_all: 我相关的
+  label_icm_incident_request_view_filter_data_range_main: 我参与的
   #========================= end icm incident_requests_controller=======================#
   #=========================    icm incident_journals_controller=======================#
   label_icm_incident_reply_support_group_id: Referred group
