--- a/config/locales/slm/zh.yml
+++ b/config/locales/slm/zh.yml
@@ -17,6 +17,7 @@ zh:
   label_slm_service_catalog_new: 新建服务
   label_slm_service_catalog_edit: 编辑服务
   label_slm_service_catalog_catalog_code: 编码
+  label_slm_service_catalog_parent_catalog: 父服务
   label_slm_service_catalog_name: 名称
   label_slm_service_catalog_description: 描述
   label_slm_service_catalog_status_meaning: 记录描述
@@ -36,6 +37,8 @@ zh:
   label_add_service_member: 添加成员
   label_add_service_break: 添加时间段
   label_slm_service_catalog: 服务
+  label_slm_service_catalog_usable_external_system: 可用于外部系统
+
   #=========================    end service_catalogs_controller=======================#
   #=========================    slm service_members_controller=======================#
   label_slm_service_member_list: 服务成员列表
