--- a/config/locales/irm/en.yml
+++ b/config/locales/irm/en.yml
@@ -7,6 +7,7 @@ en:
   invalid_invitation_key: Invalid invitation key!
   current_page_help: Current page help
   #usual button
+  unknow: Unknow
   cancel: Cancel
   next: Next
   last: Previous
