--- a/config/locales/skm/en.yml
+++ b/config/locales/skm/en.yml
@@ -35,6 +35,7 @@ en:
   label_action_select_elements: Select Template Element
   label_action_edit_detail: Edit Element Details
   #=========================entry headers================================
+  label_skm: Service Knowledge
   label_skm_entry_header: SKM Entry
   label_skm_entry_header_list: SKM Entries List
   label_skm_entry_header_new: Create Entry
