--- a/config/locales/skm/zh.yml
+++ b/config/locales/skm/zh.yml
@@ -53,6 +53,7 @@ zh:
   notice_skm_entry_header_choice_template: 选择知识库模板
   notice_skm_entry_header_input_content: 输入文章内容
   notice_skm_entry_header_subject_and_att: 选择附件
+  label_skm_entry_header_attachments: 知识库附件
   notice_skm_entry_header_preview_entry: 预览知识库文章
   label_skm_entry_header_search_by_title: 搜索文章
   label_skm_entry_header_my_favorites: 我的收藏
